# knowflow-rag-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  deployment.md  launch-hardening.md  rag-design.md  retrieval-experiment.md
docs/adr/: 0001-pre-ranking-permission-filtering.md
evals/: rag_eval_set.jsonl  rag_holdout.jsonl
knowflow/: __init__.py  agent.py  audit.py  chunking.py  cli.py  config.py  evaluation.py  models.py  providers.py  retrieval.py  server.py  session_store.py  sqlite_store.py  store.py  store_factory.py  wsgi.py
knowflow/web/static/: app.css  app.js
knowflow/web/templates/: index.html
sample_docs/: reimbursement_policy.md  sales_contract.md  security_access.md  support_sla.md
scripts/: check_eval.py  demo_flow.py  retrieval_experiment.py
tests/: test_rag_agent.py
